fix: [ghostty] update theme name following v1.2.0

--- a/home/.config/ghostty/config
+++ b/home/.config/ghostty/config
@@ -13,4 +13,4 @@ window-padding-y = 10
 font-family = JetBrainsMono Nerd Font Mono
 font-family = Apple Color Emoji
 
-theme = tokyonight
+theme = TokyoNight
