feat: [fastfetch] update disk icon

--- a/home/.config/fastfetch/config.jsonc
+++ b/home/.config/fastfetch/config.jsonc
@@ -103,7 +103,7 @@
 
     {
       "type": "disk",
-      "key": "├ {icon} {}",
+      "key": "├ 󰋊 {}",
       "keyColor": "magenta",
     },
     {
